--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Rogério
+                        rio
                         <span class="text-primary">Santos</span>
                     </h1>
                     <div class="subheading mb-5">
